adding content, attempting w3 include

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <script src="script.js"></script>
 
+    <div w3-include-html="cleaned-resume.html"></div>
+    <script src="script.js"></script>
   </body>
 </html>
